following along with teh professor